--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am currently in the tenth cycle of the Economics program at Pontifical Catholic University of Peru, focusing on project evaluation, investments, and capital markets. My academic journey has strengthened my knowledge in key areas such as financial analysis, company valuation, actuarial sciences, and econometric analysis.
+
+My professional profile is marked by initiative, perseverance, responsibility, strong analytical skills, and a continuous commitment to learning. I am currently enhancing my expertise in finance, econometrics, and programming as a member of the ALM-Liquidity team at Banco de Crédito del Perú. This environment allows me to apply and deepen my skills in a practical and dynamic setting, contributing to the organization's development and success.</p>
         </div>
 
         <div class="row no-gutters">
@@ -181,7 +183,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am currently in the tenth cycle of the Economics program at Pontifical Catholic University of Peru, focusing on project evaluation, investments, and capital markets. My academic journey has strengthened my knowledge in key areas such as financial analysis, company valuation, actuarial sciences, and econometric analysis. My professional profile is marked by initiative, perseverance, responsibility, strong analytical skills, and a continuous commitment to learning. I am currently enhancing my expertise in finance, econometrics, and programming as a member of the ALM-Liquidity team at Banco de Crédito del Perú. This environment allows me to apply and deepen my skills in a practical and dynamic setting, contributing to the organization's development and success.</p>
         </div>
 
         <div class="row skills-content">
@@ -247,7 +249,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am currently in the tenth cycle of the Economics program at Pontifical Catholic University of Peru, focusing on project evaluation, investments, and capital markets. My academic journey has strengthened my knowledge in key areas such as financial analysis, company valuation, actuarial sciences, and econometric analysis. My professional profile is marked by initiative, perseverance, responsibility, strong analytical skills, and a continuous commitment to learning. I am currently enhancing my expertise in finance, econometrics, and programming as a member of the ALM-Liquidity team at Banco de Crédito del Perú. This environment allows me to apply and deepen my skills in a practical and dynamic setting, contributing to the organization's development and success.</p>
         </div>
 
         <div class="row">
@@ -313,7 +315,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am currently in the tenth cycle of the Economics program at Pontifical Catholic University of Peru, focusing on project evaluation, investments, and capital markets. My academic journey has strengthened my knowledge in key areas such as financial analysis, company valuation, actuarial sciences, and econometric analysis. My professional profile is marked by initiative, perseverance, responsibility, strong analytical skills, and a continuous commitment to learning. I am currently enhancing my expertise in finance, econometrics, and programming as a member of the ALM-Liquidity team at Banco de Crédito del Perú. This environment allows me to apply and deepen my skills in a practical and dynamic setting, contributing to the organization's development and success.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -430,7 +432,7 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am currently in the tenth cycle of the Economics program at Pontifical Catholic University of Peru, focusing on project evaluation, investments, and capital markets. My academic journey has strengthened my knowledge in key areas such as financial analysis, company valuation, actuarial sciences, and econometric analysis. My professional profile is marked by initiative, perseverance, responsibility, strong analytical skills, and a continuous commitment to learning. I am currently enhancing my expertise in finance, econometrics, and programming as a member of the ALM-Liquidity team at Banco de Crédito del Perú. This environment allows me to apply and deepen my skills in a practical and dynamic setting, contributing to the organization's development and success.</p>
         </div>
 
         <div class="row">
