--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am currently in the tenth cycle of the Economics program at Pontifical Catholic University of Peru, focusing on project evaluation, investments, and capital markets. My academic journey has strengthened my knowledge in key areas such as financial analysis, company valuation, actuarial sciences, and econometric analysis.My professional profile is marked by initiative, perseverance, responsibility, strong analytical skills, and a continuous commitment to learning.</p>
         </div>
 
         <div class="row">
@@ -133,9 +133,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>I am currently in the tenth cycle of the Economics program at Pontifical Catholic University of Peru, focusing on project evaluation, investments, and capital markets. My academic journey has strengthened my knowledge in key areas such as financial analysis, company valuation, actuarial sciences, and econometric analysis.
-
-My professional profile is marked by initiative, perseverance, responsibility, strong analytical skills, and a continuous commitment to learning. I am currently enhancing my expertise in finance, econometrics, and programming as a member of the ALM-Liquidity team at Banco de Crédito del Perú. This environment allows me to apply and deepen my skills in a practical and dynamic setting, contributing to the organization's development and success.</p>
+          <p>Throughout my academic and professional journey, I have made significant contributions to the development of highly relevant articles in the field of social sciences. Additionally, I have played a pivotal role in the establishment of groups aimed at supporting school students in learning about the Peruvian economy. In my current role, I have spearheaded initiatives for process automation, resulting in a substantial reduction in execution times compared to previous events.</p>
         </div>
 
         <div class="row no-gutters">
@@ -183,7 +181,7 @@ My professional profile is marked by initiative, perseverance, responsibility, s
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>I am currently in the tenth cycle of the Economics program at Pontifical Catholic University of Peru, focusing on project evaluation, investments, and capital markets. My academic journey has strengthened my knowledge in key areas such as financial analysis, company valuation, actuarial sciences, and econometric analysis. My professional profile is marked by initiative, perseverance, responsibility, strong analytical skills, and a continuous commitment to learning. I am currently enhancing my expertise in finance, econometrics, and programming as a member of the ALM-Liquidity team at Banco de Crédito del Perú. This environment allows me to apply and deepen my skills in a practical and dynamic setting, contributing to the organization's development and success.</p>
+          <p>I possess strong technical skills in data analysis, programming (particularly in Python, Matlab and R), and statistical modeling, with a focus on econometrics and company valuation. I excel in problem-solving and effective communication, being an adaptable and organized collaborator, with experience in leadership and teamwork.</p>
         </div>
 
         <div class="row skills-content">
@@ -191,21 +189,21 @@ My professional profile is marked by initiative, perseverance, responsibility, s
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">HTML <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
+              <span class="skill">Microsoft Office <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">PHYTON, MATLAB AND RSTUDIO <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -216,21 +214,21 @@ My professional profile is marked by initiative, perseverance, responsibility, s
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">STATA <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+              <span class="skill">LEADERSHIP <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
+              <span class="skill">TEAMWORK <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -249,7 +247,7 @@ My professional profile is marked by initiative, perseverance, responsibility, s
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>I am currently in the tenth cycle of the Economics program at Pontifical Catholic University of Peru, focusing on project evaluation, investments, and capital markets. My academic journey has strengthened my knowledge in key areas such as financial analysis, company valuation, actuarial sciences, and econometric analysis. My professional profile is marked by initiative, perseverance, responsibility, strong analytical skills, and a continuous commitment to learning. I am currently enhancing my expertise in finance, econometrics, and programming as a member of the ALM-Liquidity team at Banco de Crédito del Perú. This environment allows me to apply and deepen my skills in a practical and dynamic setting, contributing to the organization's development and success.</p>
+          <p>I am currently enhancing my expertise in finance, econometrics, and programming as a member of the ALM-Liquidity team at Banco de Crédito del Perú. This environment allows me to apply and deepen my skills in a practical and dynamic setting, contributing to the organization's development and success.</p>
         </div>
 
         <div class="row">
