--- a/index.html
+++ b/index.html
@@ -258,47 +258,50 @@
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
               <ul>
                 <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>(+51) 963-500-142</li>
+                <li>chetorres2@hotmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Bachelor's in Economics</h4>
+              <h5>2018 - Currently</h5>
+              <p><em>Potinficia Universidad Catolida del Perú, Lima</em></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>R, Python and Matlab laboratory</h4>
+              <h5>2023 - 2023</h5>
+              <p><em>Potinficia Universidad Catolida del Perú, Lima</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Capacitacion en Fundamentos de Programación en Python</h4>
+              <h5>2024 - 2024</h5>
+              <p><em>Qlab, Potinficia Universidad Catolida del Perú, Lima</em></p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Intern in Financial Engineering</h4>
+              <h5>Oct 2023 - Present</h5>
+              <p><em>Banco de Crédito del Perú, Perú, Lima </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Parameterize manual portfolios in the individual platform of the Bank.</li>
+                <li>Process reports from various affiliated companies on platforms such as Matlab. </li>
+                <li>Generate monthly reports.</li>
+                <li>Create manuals for transfer to different areas.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Research Assistant</h4>
+              <h5>May 2023 - Oct 2023</h5>
+              <p><em>Pulso PUCP, Perú, Lima</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Database management in Stata and Python.</li>
+                <li>Econometric models focused on microeconomic areas.</li>
+                <li>Data analysis within the research project framework.</li>
+                <li>Support in the database for the article “Efectividad sobre la cuarentena” Use of data such as ENAHO, ENDES, ENPOVE, and various data found in open government data.</li>
               </ul>
             </div>
           </div>
