--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <p>+51 963 500 142</p>
               </div>
 
-              <iframe src="https://maps.app.goo.gl/dZpjzhNqY3xVZ2sw9" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d410.1093161876181!2d-76.98192751794068!3d-12.068317969048245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2spe!4v1705887952745!5m2!1ses!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
