--- a/index.html
+++ b/index.html
@@ -243,17 +243,17 @@
             <div class="resume-item">
               <h4>Bachelor's in Economics</h4>
               <h5>2018 - Currently</h5>
-              <p><em>Potinficia Universidad Catolida del Perú, Lima</em></p>
+              <p><em>Pontificia Universidad Catolida del Perú, Lima</em></p>
             </div>
             <div class="resume-item">
               <h4>R, Python and Matlab laboratory</h4>
               <h5>2023 - 2023</h5>
-              <p><em>Potinficia Universidad Catolida del Perú, Lima</em></p>
+              <p><em>Pontificia Universidad Catolida del Perú, Lima</em></p>
             </div>
             <div class="resume-item">
               <h4>Capacitacion en Fundamentos de Programación en Python</h4>
               <h5>2024 - 2024</h5>
-              <p><em>Qlab, Potinficia Universidad Catolida del Perú, Lima</em></p>
+              <p><em>Qlab, Pontificia Universidad Catolida del Perú, Lima</em></p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
